# noisy-labels

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pytest.ini  404.html  LICENSE  README.md  docusaurus.config.ts  environment.yml  export_logs.ipynb  index.html  package-lock.json  package.json  pyproject.toml  sitemap.xml
assets/js/: 0c294a0d.89ca2df4.js  0e384e19.9c358369.js  14eb3368.5c9c21ad.js  17896441.9ca9e621.js  552.0662e34a.js  5e95c892.e33baf2e.js  935f2afb.70b57fa5.js  a7bd4aaa.45df58c2.js  a94703ab.120b2198.js  c24f6822.7d1f7556.js  da9f51d4.e8acd5f8.js  fc8a4fa1.c42a7457.js  main.7a1dd3df.js  runtime~main.dc8b86b1.js
category/method-specifics/: index.html
docs/: CE.md  GCE.md  cores2.md  forward_backard_T.md  intro.md
docs/methods/: _category_.json  cores2.md  dividemix.md
methods/cores2/: index.html
methods/dividemix/: index.html
rescience/: .gitignore  appendix.tex  article.py  article.tex  bibliography.bib  content.tex  header.tex  metadata.tex  metadata.yaml  yaml-to-latex.py
rescience/tables/: CIFAR-N.tex  benchmark.tex  comparison.tex  hyperparameters34.tex  hyperparametersPreAct.tex  hyperparameters_sota.tex  synthetic.tex
src/: main.py  requirements.txt  run.sh  sample_sieve.py  test.txt
src/configs/: base.py  cores_cifar10_clean.py  cores_cifar10_clean.yaml  cores_cifar10_noise.py  cores_cifar10_noise.yaml
src/data/: __init__.py  cifar.py  datamodule.py  divide_mix.py  noisylabels.py  noisylabels_with_index.py  synthetic_noise.py
src/models/: CE.py  GCE.py  __init__.py  cores2.py  divide_mix.py  fdivergence.py  (+5 more)
(+1719 files in other folders)
